<resources>
    <string name="app_name">掌上重邮</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_bottom_timetable">课表</string>
    <string name="home_bottom_youwen">邮问</string>
    <string name="home_bottom_find">发现</string>
    <string name="home_bottom_my">我的</string>
    <string name="questioner_imagecontent">题主的头像</string>
    <string name="question_title">邮问</string>
    <string name="askquestion">求助</string>
    <string name="askquestionnext">下一步</string>
    <string name="input_hint_edit_title">请输入标题</string>
    <string name="input_hint_edit_question">详细描述你的问题或需求，表达越清楚，越容易获得帮助哦！</string>
    <string name="login">登录</string>
    <string name="timetable_title">课表</string>
    <string name="help"> </string>
    <string name="courseName_classRoom">%s\n\n%s</string>
</resources>
