<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tab_menu"
        >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/home_bottom_timetable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_bottom_timetable"
            android:gravity="center"
            android:textColor="@drawable/home_bottom_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            android:text="@string/home_bottom_timetable"/>

        <TextView
            android:id="@+id/home_bottom_question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:drawableTop="@drawable/home_bottom_youwen"
            android:gravity="center"
            android:textColor="@drawable/home_bottom_text"
            android:textSize="12sp"
            android:text="@string/home_bottom_youwen"/>

        <TextView
            android:id="@+id/home_bottom_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_bottom_find"
            android:gravity="center"
            android:textColor="@drawable/home_bottom_text"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/home_bottom_find"/>

        <TextView
            android:id="@+id/home_bottom_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_bottom_myicon_selected"
            android:gravity="center"
            android:textColor="@drawable/home_bottom_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            android:text="@string/home_bottom_my"/>

    </LinearLayout>

</RelativeLayout>
